--- a/index.html
+++ b/index.html
@@ -1,21 +1,7 @@
-<!DOCTYPE html>
-<html>
+<script>
+	// Simulate a mouse click:
+//window.location.href = "http://www.w3schools.com";
 
-<head>
-    <meta charset="UTF-8">
-    <title>Hello</title>
-</head>
-
-<body>
-    <header>
-
-    </header>
-    <main>
-        Website của tui
-    </main>
-    <footer>
-
-    </footer>
-</body>
-
-</html>
+// Simulate an HTTP redirect: Điều hướng sang trang chủ
+window.location.replace("trang-chu.htm");
+</script>
